--- a/client/index.html
+++ b/client/index.html
@@ -1,28 +1,106 @@
 <html ng-app="assApp">
     <head>
+    	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+	  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
         <script src="/client/libs/angular/angular.js"></script>
         <script src="/client/libs/angular-ui-router/release/angular-ui-router.js"></script>
         <script src="/client/libs/ngstorage/ngStorage.js"></script>
         <script src="/client/js/app.js"></script>
         <script src="/client/js/controllers.js"></script>
-    </head>
 
-    <body>
-    	<nav ng-controller="navCtrl">
-		   <a href="/">Home</a>
-		   <a href="#!/leaderboard">Leaderboard</a>
-		   <a href="#!/about">About</a>
-		   <a href="#!/contact">Contact</a>
-		   <a href="#!/forumDirectory">Forum</a>
-		   <span ng-show="!currentUser">
-		     <a href="#!/login">Login</a>
-		     <a href="#!/signup">Sign Up</a>
-		   </span>
-		   <span ng-show="currentUser">
-		     <a href="#!/logout" ng-click="logout()">Logout</a>
-		   </span>
-		   <h1>{{currentUser.username}}</h1>
-		</nav>
+        <style type="text/css">
+
+        	body {
+        		text-align:center;
+        		font-family:'Permanent Marker', cursive;
+        		background-color:#00151c;
+        		color:white;
+        	}
+
+        	a {
+ 				transition:0.3s;
+ 				color:white;
+        	}
+
+        	a:hover {
+        		color:red;
+        		transition:0.3s;
+        		text-decoration:none;
+        	}
+
+        	.navbar {
+        		background-color:#002633;
+        		color:white;
+        	}
+
+        	.jumbotron {
+        		position:relative;
+        		bottom:20px;
+        		background-image:url("#!/space.gif");
+        	}
+        	input, textarea, button {
+        		color:black;
+        		border:none;
+        		border-radius:10px;
+        		transition:.3s;
+        	}
+
+        	.btn-default:hover {
+        		background-color:#232323;
+        		color:red;
+        		transition:.3s;
+        		border:none;
+        	}
+
+        	.icon-bar {
+        		background-color:white;
+        	}
+
+        </style>
+
+    </head>
+			<nav class="navbar" ng-controller="navCtrl">
+			  <div class="container">
+			    <div class="navbar-header">
+			      <button style="border:1px solid white;" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>                        
+			      </button>
+			      <a class="navbar-brand" href="#">A Special Shooter</a>
+			    </div>
+			    <div class="collapse navbar-collapse" id="myNavbar">
+			      <ul class="nav navbar-nav">
+			        <li class="dropdown">
+			          <ul class="dropdown-menu">
+			            <li><a href="#">Page 1-1</a></li>
+			            <li><a href="#">Page 1-2</a></li>
+			            <li><a href="#">Page 1-3</a></li>
+			          </ul>
+			        </li>
+			      </ul>
+			      <ul class="nav navbar-nav navbar-right">
+			        <li><a href="/">Home</a></li>
+			        <li><a href="#!/leaderboard">Leaderboard</a></li>
+			        <li><a href="#!/about">About</a></li>
+			        <li><a href="#!/contact">Contact</a></li>
+			        <li><a href="#!/forumDirectory">Forum</a></li>
+					   <li ng-show="!currentUser">
+					     <a href="#!/login">Login</a>
+					   </li>
+					   <li ng-show="!currentUser">
+					     <a href="#!/signup">Sign Up</a>
+					   </li>
+					   <li ng-show="currentUser">
+					     <a href="#!/logout" ng-click="logout()">Logout</a>
+					   </li>
+			      </ul>
+			    </div>
+			  </div>
+			</nav>
         <ui-view></ui-view>
     </body>
 </html>
