--- a/client/index.html
+++ b/client/index.html
@@ -13,11 +13,20 @@
 
         <style type="text/css">
 
-        	body {
+        	body, html {
+        		margin:0;
+        		padding:0;
         		text-align:center;
         		font-family:'Permanent Marker', cursive;
         		background-color:#00151c;
         		color:white;
+        	}
+
+        	video {
+        		position:relative;
+        		bottom:20px;
+        		min-height:100%;
+        		min-width:100%;
         	}
 
         	a {
@@ -36,10 +45,14 @@
         		color:white;
         	}
 
-        	.jumbotron {
+        	.navbar-brand, img {
+        		height:30px;
+        		width:30px;
         		position:relative;
-        		bottom:20px;
+        		bottom:1px;
+        		left:25px;
         	}
+
         	input, textarea, button {
         		color:black;
         		border:none;
@@ -54,8 +67,39 @@
         		border:none;
         	}
 
+        	.jumbotron {
+        		background-image:url(/client/img/space.gif);
+        		background-size:cover;
+        		width:100%;
+        		height:42em;
+        		position:relative;
+        		bottom:20px;
+        		margin:0 auto;
+        	}
+
+        	#jumbo-icon {
+        		height:22em;
+        		width:20em;
+        		position:relative;
+        		top:35px;
+        	}
+
         	.icon-bar {
         		background-color:white;
+        	}
+
+        	#overlap {
+        		position:relative;
+        		bottom:51em;
+        	}
+
+        	footer {
+        		background-color:black;
+        		position:relative;
+        		bottom:20px;
+        		padding:10px;
+        		height:4em;
+
         	}
 
         </style>
@@ -69,7 +113,7 @@
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>                        
 			      </button>
-			      <a class="navbar-brand" href="#">A Special Shooter</a>
+			      <a class="navbar-brand" href="#"><img src="/client/img/spaceship-icon.png"></a>
 			    </div>
 			    <div class="collapse navbar-collapse" id="myNavbar">
 			      <ul class="nav navbar-nav">
