--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,6 @@
 <html ng-app="assApp">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 	  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
